##############################################################
# Targets
##############################################################
add_executable(9_1_GL3W_basic sources/main.cpp)

##############################################################
# Linkage
##############################################################
target_link_libraries(9_1_GL3W_basic gl3w glfw ${OPENGL_LIBRARIES})
